# ASE - Allegro Sprite Editor
# Copyright (C) 2001-2011  David Capello

add_library(gui-lib
  alert.cpp
  box.cpp
  button.cpp
  component.cpp
  entry.cpp
  event.cpp
  frame.cpp
  graphics.cpp
  grid.cpp
  image_view.cpp
  jaccel.cpp
  jclipboard.cpp
  jcombobox.cpp
  jcustom_label.cpp
  jdraw.cpp
  jfont.cpp
  jfontbmp.cpp
  jhook.cpp
  jinete.cpp
  jintern.cpp
  jlink_label.cpp
  jlist.cpp
  jlistbox.cpp
  jmanager.cpp
  jmenu.cpp
  jmessage.cpp
  jpanel.cpp
  jquickmenu.cpp
  jrect.cpp
  jregion.cpp
  jsep.cpp
  jstream.cpp
  jsystem.cpp
  jtextbox.cpp
  jtooltips.cpp
  label.cpp
  paint_event.cpp
  popup_frame.cpp
  preferred_size_event.cpp
  property.cpp
  slider.cpp
  theme.cpp
  view.cpp
  widget.cpp)
