# ASEPRITE
# Copyright (C) 2001-2012  David Capello

add_library(gui-lib
  accel.cpp
  alert.cpp
  box.cpp
  button.cpp
  clipboard.cpp
  combobox.cpp
  component.cpp
  custom_label.cpp
  draw.cpp
  entry.cpp
  event.cpp
  font.cpp
  fontbmp.cpp
  frame.cpp
  graphics.cpp
  grid.cpp
  gui.cpp
  hook.cpp
  image_view.cpp
  intern.cpp
  label.cpp
  link_label.cpp
  list.cpp
  listbox.cpp
  manager.cpp
  menu.cpp
  message.cpp
  paint_event.cpp
  popup_frame.cpp
  preferred_size_event.cpp
  property.cpp
  rect.cpp
  region.cpp
  scroll_bar.cpp
  separator.cpp
  slider.cpp
  splitter.cpp
  stream.cpp
  system.cpp
  textbox.cpp
  theme.cpp
  timer.cpp
  tooltips.cpp
  view.cpp
  viewport.cpp
  widget.cpp)
