# Aseprite
# Copyright (C) 2001-2013  David Capello

add_library(raster-lib
  algo.cpp
  algo_polygon.cpp
  algofill.cpp
  algorithm/flip_image.cpp
  blend.cpp
  cel.cpp
  cel_io.cpp
  dirty.cpp
  dirty_io.cpp
  file/col_file.cpp
  file/gpl_file.cpp
  gfxobj.cpp
  image.cpp
  image_io.cpp
  images_collector.cpp
  layer.cpp
  layer_io.cpp
  mask.cpp
  mask_io.cpp
  palette.cpp
  palette_io.cpp
  pen.cpp
  quantization.cpp
  rgbmap.cpp
  rotate.cpp
  sprite.cpp
  stock.cpp)
